# td2-debugging-util

./: CMakeLists.txt  CMakePresets.json  CMakeUserEnvVars.json  README.md  vcpkg.json
source/eac_shim/: CMakeLists.txt  GameClientInterface.h  GameLauncherInterface.h  dllmain.cpp  exports.cpp  pch.h
source/uplay_shim/: CMakeLists.txt  dllmain.cpp  exports.cpp  util.h
